--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -4,27 +4,237 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/registration/forgetpassword.css" />
     <title>Forgot password</title>
   </head>
   <body>
     <main>
-      <form method="POST" id="form" action="">
-        <h1>Reset passowrd</h1>
-        <p>
-          Enter your email address associated with your account and we'll send
-          you a code to reset your password.
-        </p>
-        <div>
-          <label for="email">Email :</label>
-          <input type="text" id="email" name="email" />
+      <section class="reset-passsword" id="emailPart">
+        <form method="POST" id="form">
+          <h1>Reset passowrd</h1>
+          <p>
+            Enter your email address associated with your account and we'll send
+            you a code to reset your password.
+          </p>
+          <div>
+            <label for="email">Email :</label>
+            <input type="text" id="email" name="email" />
+          </div>
+          <p style="color: red" id="error"></p>
+          <div class="nextbtn">
+            <button type="submit">Next</button>
+          </div>
+        </form>
+      </section>
+      <!-- ///////////////////////////////////////////////////////////// -->
+      <section class="otp" id="otpPart">
+        <h1>Enter OTP</h1>
+        <div class="otp-field">
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input class="space" type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
         </div>
-        <p style="color: red" id="error"></p>
+        <div class="links">
+          <button class="resend" id="resend">Resend code !</button>
+          <a href="/forgetpassword" class="change-email">Change email ?</a>
+        </div>
+        <p style="color: red" id="error2"></p>
         <div class="nextbtn">
-          <button type="submit">Next</button>
+          <button type="submit" id="next">Next</button>
         </div>
-      </form>
+      </section>
+      <!-- ////////////////////////////////////////////////////////////////// -->
+      <section class="change-password" id="changePasswordPart">
+        <form method="POST" id="form2">
+          <h1>Change Passowrd</h1>
+          <div>
+            <label for="password">Password :</label>
+            <input type="password" id="password" name="password" />
+          </div>
+          <div>
+            <label for="confirmPassword">Confirm Password :</label>
+            <input
+              type="password"
+              id="confirmPassword"
+              name="confirmPassword"
+            />
+          </div>
+          <p style="color: red" id="error3"></p>
+          <div class="nextbtn">
+            <button type="submit">submit</button>
+          </div>
+        </form>
+      </section>
     </main>
-    <script type="module"></script>
+    <script type="module">
+      import { validateForm } from "./js/formValidation.js";
+
+      const form = document.getElementById("form");
+      const error = document.getElementById("error");
+      const error2 = document.getElementById("error2");
+      const error3 = document.getElementById("error3");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+
+        const errorMsg = validateForm(form);
+        if (errorMsg) error.innerHTML = errorMsg;
+        else {
+          // check if email is in the database
+          try {
+            const res = await fetch("/forgetpassword", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ email }),
+            });
+            const data = await res.json();
+            if (data.errMsg) error.innerHTML = data.errMsg;
+            else {
+              document.getElementById("emailPart").style.display = "none";
+              sendCode();
+            }
+          } catch (err) {
+            console.log(err);
+          }
+        }
+      });
+
+      function sendCode() {
+        const email = document.getElementById("email").value;
+
+        try {
+          fetch("/forgetpassword/sendcode", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ email }),
+          });
+        } catch (err) {
+          console.log(err);
+        }
+      }
+
+      document.getElementById("resend").addEventListener("click", sendCode);
+
+      document.getElementById("next").addEventListener("click", () => {
+        ckeckCode();
+      });
+
+      async function ckeckCode() {
+        const email = document.getElementById("email").value;
+        try {
+          const res = await fetch("/forgetpassword/checkcode", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ email, otp }),
+          });
+          const data = await res.json();
+          if (data.errMsg) {
+            error2.innerHTML = data.errMsg;
+          } else {
+            document.getElementById("otpPart").style.display = "none";
+          }
+        } catch (err) {
+          console.log(err);
+        }
+      }
+
+      ///////////////////////////////////////////////////////////////////
+      const inputs = document.querySelectorAll(".otp-field input");
+
+      inputs.forEach((input, index) => {
+        input.dataset.index = index;
+        input.addEventListener("keyup", handleOtp);
+        input.addEventListener("paste", handleOnPasteOtp);
+      });
+
+      function handleOtp(e) {
+        const input = e.target;
+        let value = input.value;
+        let isValidInput = value.match(/[0-9]/gi);
+        input.value = "";
+        input.value = isValidInput ? value[0] : "";
+
+        let fieldIndex = input.dataset.index;
+        if (fieldIndex < inputs.length - 1 && isValidInput) {
+          input.nextElementSibling.focus();
+        }
+
+        if (e.key === "Backspace" && fieldIndex > 0) {
+          input.previousElementSibling.focus();
+        }
+
+        if (fieldIndex == inputs.length - 1 && isValidInput) {
+          submit();
+        }
+      }
+
+      function handleOnPasteOtp(e) {
+        const data = e.clipboardData.getData("text");
+        const value = data.split("");
+        if (value.length === inputs.length) {
+          inputs.forEach((input, index) => (input.value = value[index]));
+          submit();
+        }
+      }
+
+      let otp = "";
+
+      async function submit() {
+        otp = ""
+        inputs.forEach((input) => {
+          otp += input.value;
+        });
+        ckeckCode();
+      }
+      /////////////////////////////////////////////////////////////////////////
+      const form2 = document.getElementById("form2");
+      form2.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+
+        const errorMsg = validateForm(form2);
+        if (errorMsg) error3.innerHTML = errorMsg;
+        else {
+          try {
+            const res = await fetch("/forgetpassword/updatepassword", {
+              method: "PUT",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                email,
+                passwrod: document.getElementById("password").value,
+              }),
+            });
+            const data = await res.json();
+            if (data.msg) {
+              location.assign(`/login`);
+            } else {
+              error3.innerHTML = "Somthing went wrong";
+            }
+          } catch (err) {
+            console.log(err);
+          }
+        }
+      });
+    </script>
   </body>
 </html>
