--- a/views/registration/login.ejs
+++ b/views/registration/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/registration/login.css" />
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <link rel="stylesheet" href="css/registration/login.css" />
     <title>Log in</title>
   </head>
   <body>
@@ -26,11 +26,11 @@
         </div>
         <div>
           <label for="password">Password : </label>
-          <div class="password-input">
-            <input type="password" id="password" name="Password" />
-            <i class="fa-regular fa-eye eye" id="eye"></i>
-            <i class="fa-regular fa-eye-slash closed-eye" id="closedEye"></i>
-          </div>
+          <input type="password" id="password" name="Password" />
+          <i class="fa-regular fa-eye eye" id="eye"></i>
+          <i class="fa-regular fa-eye-slash closed-eye" id="closedEye" style="display: none;"></i>
+        </div>
+        <div>
           <a href="/forgetpassword" class="forgotpass">Forget Password ?</a>
         </div>
         <p style="color: red" id="error"></p>
@@ -44,34 +44,8 @@
         </div>
       </form>
     </main>
-    <script type="module">
-      // << Start >> form Validation
-      import { validateForm } from "./js/formValidation.js";
-      const form = document.getElementById("form");
-      const error = document.getElementById("error");
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        if (validateForm(form)) error.innerHTML = validateForm(form);
-        else {
-          fetch("/login/post", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-              username: document.getElementById("username").value,
-              Password: document.getElementById("password").value,
-            }),
-          })
-            .then((res) => res.json())
-            .then((data) => {
-              error.innerHTML = data.err;
-            });
-        }
-      });
-      // << End >> form Validation
-
-      // << Start >> for eye icon show and hide password
+    <!-- eye -->
+    <script>
       const eye = document.getElementById("eye");
       const closedEye = document.getElementById("closedEye");
       const passwordInput = document.querySelector("#password");
@@ -86,7 +60,38 @@
         closedEye.style.display = "none";
         eye.style.display = "block";
       });
-      // << End >> of eye icon show and hide password
+    </script>
+
+    <script type="module">
+      import { validateForm } from "./js/formValidation.js";
+
+      const form = document.getElementById("form");
+      const error = document.getElementById("error");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const errorMsg = validateForm(form);
+        if (errorMsg) error.innerHTML = errorMsg;
+        else {
+          try {
+            const res = await fetch("/login", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                username: document.getElementById("username").value,
+                Password: document.getElementById("password").value,
+              }),
+            });
+            const data = await res.json();
+            if (data.errMsg) error.innerHTML = data.errMsg;
+            else if (data.user) location.assign(`/student/${data.user}`);
+          } catch (err) {
+            console.log(err);
+          }
+        }
+      });
     </script>
   </body>
 </html>
