--- a/views/registration/signup.ejs
+++ b/views/registration/signup.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/registration/signup.css" />
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -12,22 +12,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <link rel="stylesheet" href="css/registration/signup.css" />
     <title>Sign up</title>
   </head>
   <body>
     <main>
       <form method="post" id="form" action="/signup/post">
         <h1>Sign up !</h1>
-        <div class="contanier">
-          <div>
-            <label for="firstName">First Name : </label>
-            <input type="text" id="firstName" name="firstName" />
-          </div>
-          <div>
-            <label for="lastName">Last Name : </label>
-            <input type="text" id="lastName" name="lastName" />
-          </div>
+        <div>
+          <label for="firstName">First Name : </label>
+          <input type="text" id="firstName" name="firstName" />
+        </div>
+        <div>
+          <label for="lastName">Last Name : </label>
+          <input type="text" id="lastName" name="lastName" />
         </div>
         <div>
           <label for="username">Username : </label>
@@ -37,13 +35,11 @@
           <label for="email">Email : </label>
           <input type="text" id="email" name="email" />
         </div>
-        <div>
+        <div class="password-input">
           <label for="password">Password : </label>
-          <div class="password-input">
-            <input type="password" id="password" name="Password" />
-            <i class="fa-regular fa-eye eye" id="eye"></i>
-            <i class="fa-regular fa-eye-slash closed-eye" id="closedEye"></i>
-          </div>
+          <input type="password" id="password" name="Password" />
+          <i class="fa-regular fa-eye eye" id="eye"></i>
+          <i class="fa-regular fa-eye-slash closed-eye" id="closedEye" style="display: none;"></i>
         </div>
         <p style="color: red" id="error"></p>
         <div>
@@ -52,37 +48,9 @@
         <a href="/login" class="sign-in">Already have an account ? Sign in</a>
       </form>
     </main>
-    <script type="module">
-      // << Start >> form Validation
-      import { validateForm } from "./js/formValidation.js";
-      const form = document.getElementById("form");
-      const error = document.getElementById("error");
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        if (validateForm(form)) error.innerHTML = validateForm(form);
-        else {
-          fetch("/signup/post", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-              firstName: document.getElementById("firstName").value,
-              lastName: document.getElementById("lastName").value,
-              username: document.getElementById("username").value,
-              email: document.getElementById("email").value,
-              password: document.getElementById("password").value,
-            }),
-          })
-            .then((res) => res.json())
-            .then((data) => {
-              error.innerHTML = data.err;
-            });
-        }
-      });
-      // << End >> form Validation
 
-      // << Start >> for eye icon show and hide password
+    <!-- eye -->
+    <script>
       const eye = document.getElementById("eye");
       const closedEye = document.getElementById("closedEye");
       const passwordInput = document.querySelector("#password");
@@ -97,7 +65,41 @@
         closedEye.style.display = "none";
         eye.style.display = "block";
       });
-      // << End >> of eye icon show and hide password
+    </script>
+
+    <script type="module">
+      import { validateForm } from "./js/formValidation.js";
+
+      const form = document.getElementById("form");
+      const error = document.getElementById("error");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const errorMsg = validateForm(form);
+        if (errorMsg) error.innerHTML = errorMsg;
+        else {
+          try {
+            const res = await fetch("/signup", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({
+                role: "student",
+                firstName: document.getElementById("firstName").value,
+                lastName: document.getElementById("lastName").value,
+                username: document.getElementById("username").value,
+                email: document.getElementById("email").value,
+                password: document.getElementById("password").value,
+                gpa: 0,
+              }),
+            });
+            const data = await res.json();
+            if (data.errMsg) error.innerHTML = data.errMsg;
+            else if(data.user) location.assign(`/student/${data.user}`)
+          } catch (err) {
+            console.log(err);
+          }
+        }
+      });
     </script>
   </body>
 </html>
