--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -221,7 +221,7 @@
               },
               body: JSON.stringify({
                 email,
-                passwrod: document.getElementById("password").value,
+                password: document.getElementById("password").value,
               }),
             });
             const data = await res.json();
