--- a/views/registration/login.ejs
+++ b/views/registration/login.ejs
@@ -24,11 +24,11 @@
           <label for="username">Username : </label>
           <input type="text" id="username" name="username" />
         </div>
-        <div>
+        <div class="conatiner">
           <label for="password">Password : </label>
           <input type="password" id="password" name="Password" />
           <i class="fa-regular fa-eye eye" id="eye"></i>
-          <i class="fa-regular fa-eye-slash closed-eye" id="closedEye" style="display: none;"></i>
+          <i class="fa-regular fa-eye-slasheye" id="closedEye"></i>
         </div>
         <div>
           <a href="/forgetpassword" class="forgotpass">Forget Password ?</a>
@@ -86,7 +86,8 @@
             });
             const data = await res.json();
             if (data.errMsg) error.innerHTML = data.errMsg;
-            else if (data.user) location.assign(`/student/${data.user}`);
+            else if (data.user)
+              location.assign(`/${data.user.role}/${data.user._id}`);
           } catch (err) {
             console.log(err);
           }
