--- a/views/admin/editProfile.ejs
+++ b/views/admin/editProfile.ejs
@@ -19,7 +19,7 @@
         <!-- Account page navigation-->
         <nav class="nav nav-borders">
             <a class="nav-link active ms-0" href="#">Profile</a>
-            <a class="nav-link" href="#">Security</a>
+            <a class="nav-link" href="/admin/security">Security</a>
             <a class="nav-link" href="#">Notifications</a>
         </nav>
         <hr class="mt-0 mb-4" />
