--- a/views/admin/editProfile.ejs
+++ b/views/admin/editProfile.ejs
@@ -20,7 +20,7 @@
         <nav class="nav nav-borders">
             <a class="nav-link active ms-0" href="#">Profile</a>
             <a class="nav-link" href="/admin/security">Security</a>
-            <a class="nav-link" href="#">Notifications</a>
+            <a class="nav-link" href="/admin/notifications">Notifications</a>
         </nav>
         <hr class="mt-0 mb-4" />
         <div class="row">
