--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -21,7 +21,7 @@
         <nav class="nav nav-borders">
             <a class="nav-link " href="/admin/editProfile">Profile</a>
             <a class="nav-link active ms-0" href="#">Security</a>
-            <a class="nav-link" href="#">Notifications</a>
+            <a class="nav-link" href="/admin/notifications">Notifications</a>
         </nav>
         <hr class="mt-0 mb-4" />
         <div class="row">
