--- a/views/admin/courses.ejs
+++ b/views/admin/courses.ejs
@@ -12,9 +12,12 @@
     referrerpolicy="no-referrer"
   />
   <link rel="stylesheet" href="css/admin/nav.css" />
-    <title>Admin-Courses</title>
+    <title>Admin-Dashboard</title>
   </head>
   <body>
     <%- include("./nav.ejs") %>
+    <main>
+      sd
+    </main>
   </body>
 </html>
